<resources>
    <string name="action_settings">切换搜索</string>
    <string name="action_settings2">ip地址更换</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="zfjl">订单记录</string>
    <string name="wdpj">检查更新</string>
    <string name="fwyd">退出登录</string>
    <string name="cslb">切换</string>
    <string name="icon_text1">搜索</string>
    <string name="icon_text2">地图</string>
    <string name="icon_text3">我</string>
    <string name="tip1">登录或注册则表示您同意</string>
    <string name="tip2">《使用条款》</string>
    <string name="fang_name">房间名字</string>
    <string name="rzsj">计时时间</string>
    <string name="zfjs">退房</string>
    <string name="ckxc">查看房间</string>
    <string name="live_time">时间</string>
    <string name="zf">价格</string>
    <string name="pj">评价</string>
    <string name="look">房间</string>
    <string name="once">预约</string>
    <string name="information">信息</string>
    <string name="problem">问题</string>
    <string name="yuyue">预约</string>
    <string name="sousuo">搜索</string>
    <string name="danjia">元/15分钟</string>


    <string name="title">我的客服</string>
    <string name="wyfy">我要反映</string>
    <string name="doorbad">门锁损坏</string>
    <string name="Wei_Xian">紧急事件</string>
    <string name="Wc">卫生打扫</string>
    <string name="cjwt">常见问题</string>
    <string name="yjyye">押金与余额</string>
    <string name="qb">押金与余额的区别</string>
    <string name="tk">押金退款</string>
    <string name="yeth">余额退还</string>
    <string name="rhcz">如何充值</string>
    <string name="rz">认证</string>
    <string name="smrz">实名认证</string>
    <string name="ckzt">查看认证状态</string>
    <string name="rzcs">认证次数</string>
    <string name="because">认证审核不通过原因</string>
    <string name="ruler">住房相关规则</string>
    <string name="tugz">退房规则</string>
    <string name="jfgz">计费规则说明</string>
    <string name="yhxy">用户协议</string>
    <string name="tstk">提示条款</string>
    <string name="lxwm">联系我们</string>
    <string name="kflxfs">客服联系方式</string>
    <string name="ggswxg">公共事务相关</string>
    <string name="lxzxkf">联系客服</string>
    <string name="dhkf">电话客服</string>
    <string name="ys">物品遗失</string>
    <string name="wpys">亲爱的主人，物品遗失请您第一时间联系我们的客服人员，我们会尽最大努力帮您寻找；</string>
    <string name="wxts">温馨提示退房完毕后请检查随身物品，避免遗失</string>
    <string name="wtxq">问题详情</string>
    <string name="yyq">亲爱的主人，为了保证押金缴纳及退还的流畅性，本app将押金与充值余额分开。
    1、押金为使用本app的保险金。押金可随时申请提现，原路返回。
    2、余额为了使用本app用于支付住房订单，可随时进行充值，永不过期。
    温馨提示：
    余额可申请退还（余额退款后活动赠送余额无法提现并清零，请您三丝哦~）。余额提现需求，可与客服人员联系。</string>
    <string name="yjtk">亲爱的主人，您可打开APP端，点击左下角小人头【我的钱包】-【我的押金】-【押金退款】，
操作结束后，押金会在三个工作日内退还至您的原支付账户。</string>
    <string name="yetha">亲爱的主人，请您确认不再用房的情况下，余额可申请退还，余额退还后活动赠送金额即刻
    归零。您可在本页与在线客服联系（部分地区用户直接申请退余额）。退款会在3个工作室内原路退还至您的支付账户。</string>
    <string name="rhcza">亲爱的主人，您可打开APP端，点击左下角小人头-【我的钱包】-【充值】-点选【充值金额】-
【立即充值】进行充值即可，充值方式为微信、支付宝和Apple pay.</string>
    <string name="smrza">亲爱的主人，注册后在认证步骤中提交信息，或点击左下角小人头像【个人头像】进入
    个人信息页，在【称号】中选择【点我认证】。其中：大陆个人认证：注册后，在认证步骤中，输入姓名及中华人民共和国身份证号码并提交。
    非大陆个人用户：注册后，在认证步骤中，输入您的姓名，证件号码及国籍（确保填写的信息与证件信息一致），并上传两张照片：
    本人手持有效证件（台胞证，护照，港澳通行证）的证明合影照和有效证件正面照。</string>
    <string name="ckzta">亲爱的主人，您提交认证信息后，我们会在24小时内将认证审核结果通知您。审核通过后，您在头像
    下方会显示“认证用户”称号。您也可点击【我的】-【个人头像】，进入个人信息页，在【称号】中查询认证状态及进度。</string>
    <string name="rzcsa">亲爱的主人，每日认证上限为5次，达到上限后，APP端会提示您“认证已打上限”
当日不可进行认证，您可次日再次尝试。</string>
    <string name="becausea">亲爱的主人，请您根据以下内容进行核实，如仍然没有解决您的问题，可随时与客服
    联系，进人工审核流程。
    1、请检查您认证时输入的姓名及相关证件号码是否正确。2、若没有中国身份证或多次提交实名认证信息失败。</string>
    <string name="tuifangguizea">亲爱的主人，住房结束后请您仔细查看随时物品是否都带走，水电是否关闭，尽量节约资源并
营造良好的环境。这样也方便我们工作人员对房间的打扫与维护，感谢您的配合。</string>
    <string name="jfgza">亲爱的主人，我们的计费规则为：输入门牌号获取密码后即开始计费，
    6元/半小时，不满半小时的按半小时计费，请您放心使用。</string>
    <string name="tstka">1、提示条款  欢迎您与本app共同签署的用户服务协议（以下简称“本协议”）并使用我们提供
    的相关线上服务（指通过其实际运营的互联网平台向您提供的平台网络服务）及线下服务（指您通过平台在移动设备上的APP
        应用程序解锁房间门后进行有偿租赁的服务，以及我们提供的其他线下管理服务）。</string>
    <string name="kflxfsa">亲爱的主人，遇到问题可随时拨打电话4001-xxxxxx,客服工作时间：早7:00~次日凌晨1:00.</string>
    <string name="ggswxga">亲爱的主人，遇到公共事务咨询及合作，请您发邮件至20xxxxxxxx@.qq.com，求职请发邮件至21xxxxxxxx@.qq.com.</string>
    <string name="Wca">亲爱的主人，用户使用完后，退房提交后，我们的工作人员会受到消息，在下次用户退房之后的半小时内
会进行打扫房间，一般一间房间平均要打扫40分钟，我们会给您提供舒适健康的环境，期待您的入住。</string>

    <string name="xieyititle">ofo house用房协议（草案）</string>
    <string name="app_name">ofo house</string>
    <string name="xieyicontent1">欢迎来到ofo house。</string>
    <string name="xieyicontent2">请您仔细阅读以下条款，如果您对本协议的任何条款表示异议，您可以选择不进入ofo house。当您注册成功，无论是进入ofo house，还是在ofo house上发布任何内容（即「内容」），均意味着您（即「用户」）完全接受本协议项下的全部条款。</string>
    <string name="xieyititle1">使用规则</string>
    <string name="xieyicontent3">1.用户注册成功后，ofo house将默认每个用户的手机号为该用户的用户帐号，该用户帐号由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。</string>
    <string name="xieyicontent4">2.用户须对在ofo house的注册信息的真实性、合法性、有效性承担全部责任，用户不得冒充他人；不得利用他人的名义发布任何信息并进行消费；不得恶意使用注册帐号做出评论；否则ofo house有权立即停止提供服务，由用户独自承担由此而产生的一切法律责任。</string>
    <string name="xieyicontent5">3.用户承诺不得以任何方式利用ofo house直接或间接从事违反中国法律以及社会公德的行为，ofo house有权对违反上述承诺的内容予以删除。</string>
    <string name="xieyicontent6">4.用户不得利用ofo house服务上载、复制、发布、传播如下内容：
反对宪法所确定的基本原则的；
危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
损害国家荣誉和利益的；
煽动民族仇恨、民族歧视，破坏民族团结的；
破坏国家宗教政策，宣扬邪教和封建迷信的；
散布谣言，扰乱社会秩序，破坏社会稳定的；
散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
侮辱或者诽谤他人，侵害他人合法权益的；
含有法律、行政法规禁止的其他内容的信息。</string>
    <string name="xieyititle2">个人隐私</string>
    <string name="xieyicontent7">尊重用户个人隐私信息的私有性是ofo house的一贯原则，ofo house将通过技术手段、强化内部管理等办法充分保护用户的个人隐私信息，除法律或有法律赋予权限的政府部门要求或事先得到用户明确授权等原因外，ofo house保证不对外公开或向第三方透露用户个人隐私信息，或用户在使用服务时存储的非公开内容。</string>
    <string name="xieyititle3">协议修改</string>
    <string name="xieyicontent8">根据互联网的发展和有关法律、法规及规范性文件的变化，或者因业务发展需要，ofo house有权对本协议的条款作出修改或变更，一旦本协议的内容发生变动，ofo house将会直接在知乎网站上公布修改之后的协议内容，该公布行为视为ofo house已经通知用户修改内容。ofo house也可采用电子邮件或私信的传送方式，提示用户协议条款的修改、服务变更、或其它重要事项。如果不同意ofo house对本协议相关条款所做的修改，用户有权并应当停止使用ofo house。如果用户继续使用ofo house，则视为用户接受ofo house对本协议相关条款所做的修改。</string>
    <!-- QR_Code -->
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the
        device.
    </string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="preferences_vibrate">preferences_vibrate</string>
    <string name="preferences_play_beep">preferences_play_beep</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preview_msg">&#160;preview pages available,click Download for more.</string>
    <string name="photo_album">相册</string>
    <string name="flash_light">闪光灯</string>
    <string name="qrcode">二维码</string>
    <string name="hand_input">手动输入</string>
    <string name="decode_qrcode">扫一扫</string>
    <string name="queren">请确认您输入了正确的房间编号</string>
    <string name="tijiao">立即用房</string>
    <string name="kaisuoma">如遇门锁有问题请报修</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_phonenumber">请填写手机号</string>
    <string name="code_login">验证码登录</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="getcode">获取验证码</string>
    <string name="shortcode">短信验证码</string>
    <string name="produce_QRCode">生成二维码</string>
    <string name="input_password">设置登录密码</string>
    <string name="input_repassword">确认登录密码</string>
    <string name="register_soon">立即注册</string>
    <string name="nick_name">输入昵称：</string>
    <string name="idnum">身份证号：</string>
    <string name="real_name">真实姓名：</string>
    <string name="birthday">出生日期：</string>
    <string name="click_choose">点我选择</string>
    <string name="choose_sex">选择性别：</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="email_address">输入邮箱：</string>
    <string name="IDcardpic">身份证正面图：</string>
    <string name="take_IDpic">请对准您的身份证正面拍照</string>
    <string name="submit">提交</string>
    <string name="tip3">您现在扫码的房间为：</string>
    <string name="house_price">房间价格：</string>
    <string name="house_order_state">房间预订状态：</string>
    <string name="live_immediatly">立即入住</string>
    <string name="order_house">预约该房间</string>
    <string name="house_locate">房间位置：</string>
    <string name="tg">跳过5</string>
    <string name="shiming">实名认证</string>
    <string name="clickjump">跳过</string>
    <string name="house_introduce">房间简介：</string>
    <string name="sure">确定</string>
    <string name="chaoshi">该码只在5分钟内有效，若超时，请重新扫码获取</string>
    <string name="title_activity_updatecode">Updatecode</string>
    <string name="saoma">扫码</string>
    <string name="jump">验证开锁码</string>
    <string name="zhifu">支付</string>
    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
</resources>
