<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/ss2"
        android:text="@string/qb"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/ss3"
        android:text="@string/tk"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
    android:id="@+id/ss4"
    android:text="@string/yeth"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
    <Button
        android:id="@+id/ss5"
        android:text="@string/rhcz"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
