<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/sa1"
        android:text="@string/smrz"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/sa2"
        android:text="@string/ckzt"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/sa3"
        android:text="@string/rzcs"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/sa4"
        android:text="@string/because"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

