<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#3F51B5"
        android:id="@+id/aa1">
        <Button
            android:id="@+id/jia22"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/img04"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/xx8"
            android:text="@string/wtxq"
            android:textColor="#0A0A0A"
            android:textSize="50px"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/jia22"
            android:layout_toEndOf="@+id/jia22"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:layout_below="@+id/aa1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/aa2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/xx7"
            android:text="@string/tstk"
            android:textSize="60px"
            android:textColor="#3D3D3D"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="384dp"
        android:layout_height="500dp"
        android:background="#FFFFFF"
        android:id="@+id/aa3"
        android:layout_below="@+id/aa2"
        android:layout_alignLeft="@+id/aa2"
        android:layout_alignStart="@+id/aa2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/xx6"
            android:text="@string/tstka"
            android:textSize="50px"
            android:textColor="#3D3D3D"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</RelativeLayout>




